<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#607D8B"
    android:orientation="vertical"
    tools:context="com.dzimbainvestmenttrustgmail.dzimba.paymentcode.BookingPayments">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/paymentInstruction"
        android:textColor="@android:color/white"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/ecocashPaymentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="ecocashPayment"
        android:text="@string/buttontext"
        android:textColor="#0B342D"
        android:background="@drawable/button_rounded_corners"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#0B342D"
        android:onClick="makePayment"
        android:src="@mipmap/dzimba_icon_launcher"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:ems="20"
                android:hint="@string/namehint"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/cellphoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:ems="20"
                android:hint="@string/cellphoneHint"
                android:inputType="phone"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/customer_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:ems="20"
                android:hint="@string/idNumber"
                android:inputType="text"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/ecocashID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="20"
                android:hint="@string/ecocashConfirmation"
                android:inputType="text"
                android:textColorHint="@color/colorAccent"/>

            <Spinner
                android:id="@+id/houseSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/house_spinner"
                android:textColorHint="@color/colorAccent"/>

            <Spinner
                android:id="@+id/spinnerDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/duration"
                android:textColorHint="@color/colorAccent"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
